--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -13,42 +13,25 @@
         tools:context=".ImcActivity">
 
         <TextView
+            style="@style/TextViewForm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="40dp"
             android:text="@string/imc_desc" />
 
         <EditText
+            style="@style/EditTextForm"
             android:id="@+id/edit_imc_weigth"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="40dp"
-            android:hint="@string/weigth"
-            android:inputType="number"
-            android:maxLength="3" />
+            android:hint="@string/weigth"/>
 
         <EditText
+            style="@style/EditTextForm"
             android:id="@+id/edit_imc_heigth"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="40dp"
-            android:hint="@string/heigth"
-            android:inputType="number"
-            android:maxLength="3" />
+            android:hint="@string/heigth"/>
 
         <Button
+            style="@style/ButtonForm"
             android:id="@+id/btn_imc_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/black"
-            android:text="@string/calc" />
+            android:text="@string/calc"/>
 
     </LinearLayout>
 
