--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/eraz_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,12 +11,15 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        tools:context=".ImcActivity">
+        tools:context=".ImcActivity"
+        android:background="@drawable/shape_calc_menu">
 
         <TextView
             style="@style/TextViewForm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textColor="@color/container"
             android:text="@string/imc_desc" />
 
         <EditText
