--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -2,16 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:paddingTop="32dp"
+    android:paddingBottom="16dp">
 
     <LinearLayout
         android:id="@+id/item_container_imc"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@drawable/round_bg"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="15dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -22,6 +25,9 @@
             android:src="@drawable/ic_baseline_calculate_24" />
 
         <TextView
+            android:gravity="center"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/white"
             android:id="@+id/item_txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
