--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="@string/obs_txt"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:textColor="@color/text_title"
         android:fontFamily="casual"
         android:paddingBottom="24dp"
@@ -38,7 +39,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="By: Riann"
+        android:text="@string/credits"
         android:paddingBottom="8dp"
         android:textColor="@color/text_title"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
