--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -22,7 +22,8 @@
             android:id="@+id/item_img_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_calculate_24" />
+            android:src="@drawable/ic_baseline_calculate_24"
+            android:contentDescription="@string/logo" />
 
         <TextView
             android:gravity="center"
